--- a/.github/workflows/gha.yml
+++ b/.github/workflows/gha.yml
@@ -18,15 +18,7 @@ jobs:
       WORKDIR:        utils/docker
     strategy:
       matrix:
-        CONFIG: ["TYPE=debug OS=fedora OS_VER=32 PUSH_IMAGE=1",
-                 "TYPE=debug OS=ubuntu OS_VER=20.04 PUSH_IMAGE=1 CHECK_CPP_STYLE=1",
-                 "TYPE=debug OS=ubuntu OS_VER=20.04 COVERAGE=1",
-                 "TYPE=release OS=fedora OS_VER=32",
-                 "TYPE=release OS=ubuntu OS_VER=20.04",
-                 "TYPE=valgrind OS=ubuntu OS_VER=20.04",
-                 "TYPE=memcheck_drd OS=ubuntu OS_VER=20.04",
-                 "TYPE=package OS=fedora OS_VER=32",
-                 "TYPE=package OS=ubuntu OS_VER=20.04"]
+        CONFIG: ["TYPE=debug OS=archlinux-base OS_VER=latest"]
     steps:
       - name: Clone the git repo
         uses: actions/checkout@v2
@@ -34,7 +26,7 @@ jobs:
           fetch-depth: 50
 
       - name: Pull or rebuild the image
-        run: cd $WORKDIR && ${{ matrix.CONFIG }} ./pull-or-rebuild-image.sh
+        run: cd $WORKDIR && ${{ matrix.CONFIG }} ./pull-or-rebuild-image.sh rebuild
 
       - name: Run the build
         run: cd $WORKDIR && ${{ matrix.CONFIG }} ./build.sh
